syntax = "proto3";

package auth.client;

option java_multiple_files = true;
option java_package = "com.hts.generated.grpc.client";
option java_outer_classname = "AuthClientProto";

enum AuthResult {
  SUCCESS = 0;
  FAILURE = 1;
  INVALID_CREDENTIALS = 2;
  ACCOUNT_NOT_FOUND = 3;
  ACCOUNT_SUSPENDED = 4;
  ACCOUNT_LOCKED = 5;
  SESSION_NOT_FOUND = 6;
  SESSION_EXPIRED = 7;
  INTERNAL_ERROR = 8;
}

message LoginRequest {
  int64 account_id = 1;
  string password = 2;
  string ip_addr = 3;
}

message LoginReply {
  AuthResult code = 1;
  string session_id = 2;
  int64 account_id = 3;
}

message LogoutRequest {
  string session_id = 1;
}

message LogoutReply {
  AuthResult code = 1;
}

service AuthClientService {
  rpc Login(LoginRequest) returns (LoginReply);
  rpc Logout(LogoutRequest) returns (LogoutReply);
}
